update: accessibility in import's and scope for custom hooks

--- a/package.json
+++ b/package.json
@@ -24,7 +24,15 @@
         "path": "./snippets/react.code-snippets"
       },
       {
+        "language": "javascript",
+        "path": "./snippets/react.code-snippets"
+      },
+      {
         "language": "typescriptreact",
+        "path": "./snippets/react.code-snippets"
+      },
+      {
+        "language": "typescript",
         "path": "./snippets/react.code-snippets"
       }
     ]
