--- a/package.json
+++ b/package.json
@@ -1,38 +1,66 @@
 {
   "name": "wts-react-js-snippets",
-  "displayName": "ES6 - React and Javascript Snippets",
-  "description": "Collection of snippets for Javascript, React and Typescript",
-  "version": "1.2.3",
+  "displayName": "React, TypeScript & Next.js Snippets",
+  "description": "Collection of snippets for React, TypeScript, Next.js, and JavaScript. Boost your productivity with modern shortcuts for web development.",
+  "version": "1.3.0",
   "icon": "icon.png",
-  "author": {"name": "withoutnicks"},
+  "author": {
+    "name": "withoutnicks"
+  },
   "publisher": "wts-dev",
-  "license":"LICENSE.txt",
+  "license": "LICENSE.txt",
   "engines": {
     "vscode": "^1.90.0"
   },
   "categories": [
     "Snippets"
   ],
-  "repository": {"type": "git", "url": "https://github.com/withoutnicks/react-and-js-snippets?tab=readme-ov-file"},
+  "keywords": [
+    "react",
+    "typescript",
+    "nextjs",
+    "snippets",
+    "javascript",
+    "web",
+    "hooks",
+    "es6"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/withoutnicks/react-and-js-snippets?tab=readme-ov-file"
+  },
   "contributes": {
     "snippets": [
       {
+        "language": "javascript",
         "path": "./snippets/global.code-snippets"
+      },
+      {
+        "language": "typescript",
+        "path": "./snippets/global.code-snippets"
+      },
+      {
+        "language": "javascriptreact",
+        "path": "./snippets/global.code-snippets"
+      },
+      {
+        "language": "typescriptreact",
+        "path": "./snippets/global.code-snippets"
+      },
+      {
+        "language": "typescript",
+        "path": "./snippets/ts.code-snippets"
+      },
+      {
+        "language": "typescriptreact",
+        "path": "./snippets/ts.code-snippets"
       },
       {
         "language": "javascriptreact",
         "path": "./snippets/react.code-snippets"
       },
       {
-        "language": "javascript",
-        "path": "./snippets/react.code-snippets"
-      },
-      {
         "language": "typescriptreact",
-        "path": "./snippets/react.code-snippets"
-      },
-      {
-        "language": "typescript",
         "path": "./snippets/react.code-snippets"
       }
     ]
