--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "wts-react-js-snippets",
-  "displayName": "React, TypeScript & Javascript Snippets",
-  "description": "Collection of snippets for React, TypeScript, Javascript, and JavaScript. Boost your productivity with modern shortcuts for web development.",
-  "version": "1.3.0",
-  "icon": "icon.png",
+  "displayName": "React, Typescript & Javascript Snippets",
+  "description": "Collection of snippets for React, Typescript, and Javascript. Boost your productivity with modern shortcuts for web development.",
+  "version": "1.3.1",
+  "icon": "logo.jpg",
   "author": {
     "name": "withoutnicks"
   },
